<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/main_menu_settings"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visible="true" />

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="2"
        android:title="@string/main_menu_action_top_rated"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_popular"
        android:orderInCategory="3"
        android:title="@string/main_menu_action_popular"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="3"
        android:title="@string/main_menu_action_favorites"
        app:showAsAction="collapseActionView" />
</menu>
